--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": "^8.1",
         "filament/filament": "^2.17",
         "guzzlehttp/guzzle": "^7.2",
+        "jantinnerezo/livewire-alert": "^2.2",
         "laravel/framework": "^10.8",
         "laravel/jetstream": "^3.1",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.11",
+        "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
